--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,23 +3,35 @@ on:
   push:
     tags:
       - 'v*'
-jobs:
-  build:
-    runs-on: ubuntu-18.04
 
+env:
+  REGISTRY: 'registry.digitalocean.com/zuut'
+  IMAGE_NAME: 'zuut-prod'
+  ZUUT_PROD_APP_ID: 'f4d2f467-35b2-4cdc-82e1-7542c2158ee0'
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Deploy to Heorku
-        uses: akhileshns/heroku-deploy@v3.12.12
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+
+      - name: Build container image
+        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME) .
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'zuut-prod' #Must be unique in Heroku
-          heroku_email: 'zuutheroku@gmail.com'
-          usedocker: true
-          #healthcheck: true // save for later
-          #delay: 30 // saving for healthcheck if we want it later, set to 30 secs
-          docker_build_args: |
-            MIXPANEL_TOKEN
-        env:
-          MIXPANEL_TOKEN: 'c3c6fa03d2d58bf1cb9fe4a7a211ba79'
-        #timeout-minutes: 2
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 600
+
+      - name: Remove all old images
+        run: if [ ! -z "$(doctl registry repository list | grep "$(echo $IMAGE_NAME)")" ]; then doctl registry repository delete-manifest $(echo $IMAGE_NAME) $(doctl registry repository list-tags $(echo $IMAGE_NAME) | grep -o "sha.*") --force; else echo "No repository"; fi
+
+      - name: Push image to DigitalOcean Container Registry
+        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME)
+
+      - name: Force redeploy after image is pushed
+        run: doctl apps create-deployment $(echo $ZUUT_PROD_APP_ID)
