--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -56,6 +56,9 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.3.16",
+    "@types/mixpanel-browser": "^2.38.0",
+    "mixpanel-browser": "^2.45.0",
+    "react-error-boundary": "^3.1.4",
     "highlight.js": "^11.6.0",
     "history": "^5.3.0",
     "i18next-browser-languagedetector": "^6.1.5",
