--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -13,7 +13,8 @@
     "eject": "react-scripts eject",
     "clear-all": "rm -rf build node_modules",
     "re-start": "rm -rf build node_modules && yarn install && yarn start",
-    "re-build": "rm -rf build node_modules && yarn install && yarn build"
+    "re-build": "rm -rf build node_modules && yarn install && yarn build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -51,24 +52,24 @@
     "@mui/x-date-pickers": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^4.3.7",
+    "@types/mixpanel-browser": "^2.38.0",
     "@types/react-redux": "^7.1.24",
     "airtable": "^0.11.4",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.3.16",
-    "@types/mixpanel-browser": "^2.38.0",
-    "mixpanel-browser": "^2.45.0",
-    "react-error-boundary": "^3.1.4",
     "highlight.js": "^11.6.0",
     "history": "^5.3.0",
     "i18next-browser-languagedetector": "^6.1.5",
     "konva": "^8.3.12",
+    "mixpanel-browser": "^2.45.0",
     "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.35.0",
     "react-i18next": "^11.18.6",
@@ -89,6 +90,7 @@
     "rison-node": "^2.1.1",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
+    "source-map-explorer": "^2.5.3",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
     "uuid": "^9.0.0",
