make modifier items go in shopping cart

--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -11,6 +11,7 @@
     "dev": "npm start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "test": "react-scripts test",
     "clear-all": "rm -rf build node_modules",
     "re-start": "rm -rf build node_modules && yarn install && yarn start",
     "re-build": "rm -rf build node_modules && yarn install && yarn build",
