--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -47,11 +47,13 @@
     "@emotion/styled": "^11.9.3",
     "@hookform/resolvers": "^2.9.8",
     "@iconify/react": "^3.2.2",
+    "@liveblocks/client": "^0.18.5",
+    "@liveblocks/redux": "^0.18.5",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.8.6",
     "@mui/x-date-pickers": "^5.0.2",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@reduxjs/toolkit": "^1.8.6",
     "@tanstack/react-query": "^4.3.7",
     "@types/mixpanel-browser": "^2.38.0",
     "@types/react-redux": "^7.1.24",
@@ -78,11 +80,12 @@
     "react-lazy-load-image-component": "^1.5.4",
     "react-markdown": "^8.0.3",
     "react-modal": "^3.15.1",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.4",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.0",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
     "redux-first-history": "^5.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk-error-handler": "^1.1.4",
