Revert "mess with actions script to get this to deploy"
This reverts commit d506fa166608390e0dd05a513089f410f7d7dd84.

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,9 +2,7 @@ name: dev
 on:
   push:
     branches:
-      - main
-    tags:
-      - 'd*'
+      - main, liveblocks
 
 env:
   REGISTRY: 'registry.digitalocean.com/zuut-co'
