--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: dev
 on:
   push:
     branches:
-      - main, liveblocks
+      - main
 
 env:
   REGISTRY: 'registry.digitalocean.com/zuut-co'
