growId with save to firebase

--- a/ui-new/package.json
+++ b/ui-new/package.json
@@ -58,6 +58,7 @@
     "airtable": "^0.11.4",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
+    "firebase": "^9.14.0",
     "framer-motion": "^6.3.16",
     "highlight.js": "^11.6.0",
     "history": "^5.3.0",
