--- a/ui-next/package.json
+++ b/ui-next/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.8",
     "@iconify/react": "^4.0.0",
+    "@mui/icons-material": "^5.10.14",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.9.0",
@@ -38,14 +39,20 @@
     "framer-motion": "^7.5.3",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
+    "konva": "^8.3.14",
     "lodash": "^4.17.21",
+    "mixpanel-browser": "^2.45.0",
     "next": "^13.0.1",
     "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.37.0",
     "react-i18next": "^11.18.6",
+    "react-konva": "^18.2.3",
     "react-lazy-load-image-component": "^1.5.5",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
@@ -62,6 +69,7 @@
   "devDependencies": {
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/lodash": "^4.14.186",
+    "@types/mixpanel-browser": "^2.38.0",
     "@types/node": "^18.8.5",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.21",
