--- a/ui-next/package.json
+++ b/ui-next/package.json
@@ -12,7 +12,7 @@
     "start": "next start",
     "build": "next build",
     "build-netlify": "next build && cp -r .next _next && mv _next .next/",
-    "export": "yarn build && next export -o _static",
+    "export": "next build && next export -o _static",
     "clear-all": "rm -rf .next .swc _static node_modules",
     "re-start": "rm -rf .next .swc _static node_modules && yarn install && yarn dev",
     "re-build": "rm -rf .next .swc _static node_modules && yarn install && yarn build"
